--- a/doctored/css/screen.css
+++ b/doctored/css/screen.css
@@ -41,7 +41,7 @@
             display:inline-block;
             left: -0.2em;
             top: 0.5em;
-            content: attr(data-element);
+            content: "\271B " attr(data-element); /*\271B \271A \2795 */
             margin-right: -3em;
             width:3em;
             white-space:nowrap;
