--- a/doctored/css/screen.css
+++ b/doctored/css/screen.css
@@ -106,10 +106,20 @@ textarea.doctored-view-source-textbox {
     resize: none;
 }
 
-div.doctored-view-source-resize {
+div.doctored-view-source-resizer {
+    position:absolute;
     background: red;
-    width: 5px;
-    height:100%;
+    width: 7px;
+    border: 70px solid blue;
+    border-top: none;
+    border-bottom: none;
+    height: 5px; /* NOTE: will be overridden */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 menu.doctored-dialog {
