--- a/doctored/css/themes.css
+++ b/doctored/css/themes.css
@@ -301,6 +301,18 @@ samp.doctored-tooltip.doctored-theme-flat {
                 box-shadow: 0px 3px 0px -1px white;
             }
 
+            ul.doctored-tabs.doctored-theme-flat li.doctored-current.doctored-dragging-tab,
+            ul.doctored-tabs.doctored-theme-flat li.doctored-dragging-tab {
+                box-shadow: 1px 1px 2px rgba(0,0,0,0.9);
+            }
+
+            ul.doctored-tabs.doctored-theme-flat li.doctored-current.doctored-drop-target,
+            ul.doctored-tabs.doctored-theme-flat li.doctored-drop-target {
+                border: dashed 1px #999999;
+                width:100px;
+            }
+            
+
             ul.doctored-tabs.doctored-theme-flat li span {
               display: inline-block;
               text-overflow: ellipsis;
